<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home" />
        <item
            android:id="@+id/nav_cart"
            android:title="@string/nav_cart"
            android:icon="@drawable/ic_action_cart" />
        <item
            android:id="@+id/nav_myorder"
            android:title="@string/nav_myorder"
            android:icon="@drawable/ic_myorder" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/nav_profile"
            android:icon="@drawable/ic_action_profile" />
        <item
            android:id="@+id/nav_admin"
            android:title="@string/nav_Admin_Panel"
            android:icon="@drawable/ic_admin" />
    </group>
    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:title="@string/nav_about"
                android:icon="@drawable/ic_about" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/nav_Logout"
                android:icon="@drawable/ic_logout" />
        </menu>
    </item>
</menu>